--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # APIs do Backend Nodejs
-REACT_APP_API_URL=http://localhost:3003/produto
+REACT_APP_API_URL=https://backendproduto.herokuapp.com/produto
